<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>

    <string name="name_text">Привет! Как вас зовут?</string>
    <string name="language_text">Ваш язык: Неизвестно</string>
    <string name="presented_text">Представиться</string>
    <string name="choice_language_text">Выбрать язык</string>
    <string name="your_name">Ваше имя:</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="belorussian">Белорусский</string>

</resources>
