<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_text"
            android:id="@+id/textName" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/language_text"
            android:id="@+id/textLanguage" android:layout_below="@+id/textName" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presented_text"
            android:id="@+id/btnPresented"
            android:layout_below="@+id/textLanguage" android:layout_alignParentStart="true" android:onClick="onPresent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_language_text"
            android:id="@+id/btnLanguage" android:layout_below="@+id/textLanguage" android:layout_alignParentEnd="true"
            android:onClick="onChoiceLanguage"/>
</RelativeLayout>