<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:id="@+id/btnEnglish"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:onClick="onEnglish"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:id="@+id/btnRussian" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/btnEnglish"
            android:onClick="onRussian"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belorussian"
            android:id="@+id/btnBeloRussian" android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnRussian" android:onClick="onBeloRussian"/>
</RelativeLayout>